--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,36 +1,49 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    padding: 0;
+    font-family: Helvetica, sans-serif;
 }
 
 .navbar {
     overflow: hidden;
-    background-color: white;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
 }
-
-    .navbar a {
+    a {
         float: left;
         display: block;
         color: black;
         text-align: center;
-        padding: 14px 20px;
+        padding: 30px 16px 26px 16px;
         text-decoration: none;
+        font-size: 12pt;
+        color: black;
+    }
+    a:hover {
+        background-color:#ddd;
     }
 
-        .navbar a.right {
-            float: right;
-        }
+.logo {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 12px 20px;
+    text-decoration: none;
+    font-size: 17px;
+}
+    img {
+        width: auto;
+        height: 45px;
+    }
 
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
 
-        .navbar a.active {
-            background-color: white;
-            color: black;
-            font-weight:bold;
+@media (max-width: 1000px) {
+    .navbar {
+        background: yellow;
+    }
+        a {
+            font-size: 30px
         }
+    .logo {
+        padding: 19px 25px;
+    }
+}
