--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,24 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
+    cursor: crosshair;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .navbar {
     overflow: hidden;
+    background-color: whitesmoke;
 }
     a {
         float: left;
         display: block;
         color: black;
         text-align: center;
-        padding: 30px 16px 26px 16px;
+        padding: 30px 16px 25px 16px;
         text-decoration: none;
         font-size: 12pt;
         color: black;
@@ -33,6 +39,14 @@ body {
     img {
         width: auto;
         height: 45px;
+        /*image rendering hax via nullsleep on tumblr*/
+        image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+        image-rendering: -moz-crisp-edges;          /* Firefox                        */
+        image-rendering: -o-crisp-edges;            /* Opera                          */
+        image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+        image-rendering: pixelated;                 /* Universal support since 2021   */
+        image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+        -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
     }
 
 
@@ -41,7 +55,7 @@ body {
         background: yellow;
     }
         a {
-            font-size: 30px
+            font-size: 20pt
         }
     .logo {
         padding: 19px 25px;
